tests/spec/compile-fail/087_defer_keyword_removed.zn
// category: compile-fail
// profile: freestanding
// purpose: Zeno v1 uses RAII/destroy instead of a defer statement

module tests.fail.deferKeywordRemoved;

fn bad() -> Unit {
    defer cleanup(); // expected-error: defer is not a Zeno keyword; use a RAII guard with destroy
    return;
}
